--- a/usr/css/pages/_main.scss
+++ b/usr/css/pages/_main.scss
@@ -202,6 +202,10 @@
                 .main-slider-next{
                     background:url(/common/img/main-arr-right.svg) no-repeat;
                 }
+                .pause-off{
+                    background:url(/common/img/main-arr-autoplay.svg) no-repeat !important;
+                    
+                }
             }
             
         }
