--- a/usr/css/pages/_login.scss
+++ b/usr/css/pages/_login.scss
@@ -72,26 +72,26 @@
     margin-top: 1.5rem;
 }
 
-.login-Find-btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: .75rem;
-    border: 1px solid rgba(var(--black), .1);
-    padding: .85rem;
-    width: 100%;
-    margin-top: 3rem;
+// .login-Find-btn{
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     gap: .75rem;
+//     border: 1px solid rgba(var(--black), .1);
+//     padding: .85rem;
+//     width: 100%;
+//     margin-top: 3rem;
 
-    p{
-        cursor: pointer;
-        color: rgba(var(--black), .5);
-    }
+//     p{
+//         cursor: pointer;
+//         color: rgba(var(--black), .5);
+//     }
 
-    hr {
-        height: 0.5rem;
-        width: 0.05rem;
-        background-color:rgba(var(--black), .1);
+//     hr {
+//         height: 0.5rem;
+//         width: 0.05rem;
+//         background-color:rgba(var(--black), .1);
         
-    }
-}
+//     }
+// }
 
