--- a/usr/style.scss
+++ b/usr/style.scss
@@ -5,7 +5,9 @@
     'css/pages/digital.scss',
     'css/pages/login.scss',
     'css/pages/archive.scss',
-    'css/pages/dataUse.scss'
+    'css/pages/dataUse.scss',
+    'css/pages/searchArchive.scss',
+    'css/pages/categorical.scss'
     ;
 
     
