--- a/usr/style.css
+++ b/usr/style.css
@@ -826,6 +826,230 @@
   font-size: var(--font18);
 }
 
+/*digital.css*/
+#total-search-box {
+  height: 15.5rem;
+  margin: 0 auto;
+  background-color: rgba(var(--black), 0.05);
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-title-box {
+  width: 1000px;
+  margin: 0 auto;
+  padding-left: 1.8rem;
+}
+.search-title-box .search-title-text {
+  font-size: 1.4rem;
+  color: rgba(var(--royalblue), 1);
+  align-self: flex-start;
+  margin-bottom: 1.7rem;
+  font-weight: 900;
+}
+
+#searchArchive {
+  margin-top: 4.7rem;
+}
+
+#searchArc-content-inner {
+  width: 1024px;
+  margin: 0 auto;
+}
+
+.searchArc-content-title {
+  font-size: var(--font28);
+  color: rgba(var(--royalblue), 1);
+  font-weight: 900;
+  margin-bottom: 2.5rem;
+}
+.searchArc-content-title span {
+  font-size: var(--font16);
+  font-weight: normal;
+  padding-left: 0.35rem;
+}
+
+.searchArc-content-box {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 0.75rem;
+}
+.searchArc-content-box .searchArc-item-title {
+  font-size: var(--font20);
+  font-weight: normal;
+  padding: 1rem;
+  text-align: left;
+  background: #efefef;
+  width: 100%;
+}
+.searchArc-content-box p {
+  padding: 1.5rem 1rem;
+  color: rgba(var(--black), 0.9);
+  font-size: var(--font16);
+  line-height: 1.5;
+}
+.searchArc-content-box .searchArc-item-buttons {
+  margin-top: 0.5rem;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0.5rem;
+  justify-content: right;
+  margin-left: auto;
+}
+.searchArc-content-box .searchArc-item-buttons button {
+  width: 11rem;
+  height: 2.5rem;
+  border-radius: 2rem;
+  color: rgba(var(--white), 1);
+  display: grid;
+  grid-template-columns: 1fr 2rem;
+  align-items: center;
+  padding-left: 1rem;
+}
+.searchArc-content-box .searchArc-item-buttons button svg {
+  fill: rgba(var(--white), 1);
+}
+.searchArc-content-box .searchArc-item-buttons button:first-child {
+  background: rgba(var(--royalblue), 1);
+}
+.searchArc-content-box .searchArc-item-buttons button:last-child {
+  background: #b1b1b1;
+}
+
+.digtal-subTitle {
+  font-size: var(--font20);
+  font-weight: bold;
+  color: rgba(var(--black), 0.65);
+}
+
+.digtal-data-list li {
+  color: rgba(var(--black), 0.65);
+  line-height: 1.5;
+}
+.digtal-data-list li::before {
+  content: "- ";
+  color: rgba(var(--black), 0.65);
+}
+.digtal-data-list button {
+  width: 11.25rem;
+  margin-top: 2.5rem;
+}
+
+/*digital.css*/
+#total-search-box {
+  height: 15.5rem;
+  margin: 0 auto;
+  background-color: rgba(var(--black), 0.05);
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-title-box {
+  width: 1000px;
+  margin: 0 auto;
+  padding-left: 1.8rem;
+}
+.search-title-box .search-title-text {
+  font-size: 1.4rem;
+  color: rgba(var(--royalblue), 1);
+  align-self: flex-start;
+  margin-bottom: 1.7rem;
+  font-weight: 900;
+}
+
+#searchArchive {
+  margin-top: 4.7rem;
+}
+
+#searchArc-content-inner {
+  width: 1024px;
+  margin: 0 auto;
+}
+
+.searchArc-content-title {
+  font-size: var(--font28);
+  color: rgba(var(--royalblue), 1);
+  font-weight: 900;
+  margin-bottom: 2.5rem;
+}
+.searchArc-content-title span {
+  font-size: var(--font16);
+  font-weight: normal;
+  padding-left: 0.35rem;
+}
+
+.searchArc-content-box {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 0.75rem;
+}
+.searchArc-content-box .searchArc-item-title {
+  font-size: var(--font20);
+  font-weight: normal;
+  padding: 1rem;
+  text-align: left;
+  background: #efefef;
+  width: 100%;
+}
+.searchArc-content-box p {
+  padding: 1.5rem 1rem;
+  color: rgba(var(--black), 0.9);
+  font-size: var(--font16);
+  line-height: 1.5;
+}
+.searchArc-content-box .searchArc-item-buttons {
+  margin-top: 0.5rem;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0.5rem;
+  justify-content: right;
+  margin-left: auto;
+}
+.searchArc-content-box .searchArc-item-buttons button {
+  width: 11rem;
+  height: 2.5rem;
+  border-radius: 2rem;
+  color: rgba(var(--white), 1);
+  display: grid;
+  grid-template-columns: 1fr 2rem;
+  align-items: center;
+  padding-left: 1rem;
+}
+.searchArc-content-box .searchArc-item-buttons button svg {
+  fill: rgba(var(--white), 1);
+}
+.searchArc-content-box .searchArc-item-buttons button:first-child {
+  background: rgba(var(--royalblue), 1);
+}
+.searchArc-content-box .searchArc-item-buttons button:last-child {
+  background: #b1b1b1;
+}
+
+.digtal-subTitle {
+  font-size: var(--font20);
+  font-weight: bold;
+  color: rgba(var(--black), 0.65);
+}
+
+.digtal-data-list li {
+  color: rgba(var(--black), 0.65);
+  line-height: 1.5;
+}
+.digtal-data-list li::before {
+  content: "- ";
+  color: rgba(var(--black), 0.65);
+}
+.digtal-data-list button {
+  width: 11.25rem;
+  margin-top: 2.5rem;
+}
+
 header {
   width: 100%;
   position: relative;
