--- a/usr/css/pages/_categorical.scss
+++ b/usr/css/pages/_categorical.scss
@@ -1,6 +1,6 @@
 /*digital.css*/
 
-#total-search-box {
+#total-categorical-box {
     height: 15.5rem;
     margin: 0 auto;
     background-color: rgba(var(--black), .05);
@@ -10,13 +10,13 @@
     justify-content: center;
 }
 
-.search-title-box {
+.categorical-title-box {
 
     width: 1000px;
     margin: 0 auto;
     padding-left: 1.8rem;
 
-    .search-title-text {
+    .categorical-title-text {
         font-size: 1.4rem;
         color: rgba(var(--royalblue), 1);
         align-self: flex-start;
@@ -27,17 +27,17 @@
 
 //컨텐츠 영역
 
-#searchArchive{
+#categoricalArchive{
     margin-top: 4.7rem;
 
 }
 
-#searchArc-content-inner{
+#categoricalArc-content-inner{
     width: 1024px;
     margin: 0 auto;
 }
 
-.searchArc-content-title{
+.categoricalArc-content-title{
     font-size: var(--font28);
     color: rgba(var(--royalblue), 1);
     font-weight: 900;
@@ -49,11 +49,41 @@
     }
 }
 
-.searchArc-content-box{
+#categoricalTab{
+    width:100%;
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+    li{
+        text-align:center;
+        padding:.5rem 0;
+        border-bottom:1px solid rgba(var(--black), .9);
+        &.categorical-tab-selected{
+            border-top:1px solid rgba(var(--black), .9);
+            border-right:1px solid rgba(var(--black), .9);
+            border-left:1px solid rgba(var(--black), .9);
+            border-bottom:1px solid transparent;
+            font-weight: bold;
+        }
+        cursor:pointer;
+    }
+    
+    margin-bottom:2rem;
+}
+
+/* 검색결과 표출영역 */
+.categoricalArc-content-flexBox{
+    > div{
+        display:none;
+        &.cate-selected-show{
+            display:block;
+        }
+    }
+}
+
+.categoricalArc-content-box{
     display: flex;
     flex-flow: row wrap;
-    gap:.75rem;
-    .searchArc-item-title{
+    .categoricalArc-item-title{
         font-size:var(--font20);
         font-weight:normal;
         padding:1rem;
@@ -68,8 +98,9 @@
         color:rgba(var(--black), .9);
         font-size:var(--font16);
         line-height:1.5;
+        width: 100%;
     }
-    .searchArc-item-buttons{
+    .categoricalArc-item-buttons{
         margin-top:.5rem;
         display:grid;
         align-items:center;
