--- a/usr/style.css
+++ b/usr/style.css
@@ -939,7 +939,7 @@
 }
 
 /*digital.css*/
-#total-search-box {
+#total-categorical-box {
   height: 15.5rem;
   margin: 0 auto;
   background-color: rgba(var(--black), 0.05);
@@ -949,12 +949,12 @@
   justify-content: center;
 }
 
-.search-title-box {
+.categorical-title-box {
   width: 1000px;
   margin: 0 auto;
   padding-left: 1.8rem;
 }
-.search-title-box .search-title-text {
+.categorical-title-box .categorical-title-text {
   font-size: 1.4rem;
   color: rgba(var(--royalblue), 1);
   align-self: flex-start;
@@ -962,33 +962,60 @@
   font-weight: 900;
 }
 
-#searchArchive {
+#categoricalArchive {
   margin-top: 4.7rem;
 }
 
-#searchArc-content-inner {
+#categoricalArc-content-inner {
   width: 1024px;
   margin: 0 auto;
 }
 
-.searchArc-content-title {
+.categoricalArc-content-title {
   font-size: var(--font28);
   color: rgba(var(--royalblue), 1);
   font-weight: 900;
   margin-bottom: 2.5rem;
 }
-.searchArc-content-title span {
+.categoricalArc-content-title span {
   font-size: var(--font16);
   font-weight: normal;
   padding-left: 0.35rem;
 }
 
-.searchArc-content-box {
+#categoricalTab {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-bottom: 2rem;
+}
+#categoricalTab li {
+  text-align: center;
+  padding: 0.5rem 0;
+  border-bottom: 1px solid rgba(var(--black), 0.9);
+  cursor: pointer;
+}
+#categoricalTab li.categorical-tab-selected {
+  border-top: 1px solid rgba(var(--black), 0.9);
+  border-right: 1px solid rgba(var(--black), 0.9);
+  border-left: 1px solid rgba(var(--black), 0.9);
+  border-bottom: 1px solid transparent;
+  font-weight: bold;
+}
+
+/* 검색결과 표출영역 */
+.categoricalArc-content-flexBox > div {
+  display: none;
+}
+.categoricalArc-content-flexBox > div.cate-selected-show {
+  display: block;
+}
+
+.categoricalArc-content-box {
   display: flex;
   flex-flow: row wrap;
-  gap: 0.75rem;
 }
-.searchArc-content-box .searchArc-item-title {
+.categoricalArc-content-box .categoricalArc-item-title {
   font-size: var(--font20);
   font-weight: normal;
   padding: 1rem;
@@ -996,13 +1023,14 @@
   background: #efefef;
   width: 100%;
 }
-.searchArc-content-box p {
+.categoricalArc-content-box p {
   padding: 1.5rem 1rem;
   color: rgba(var(--black), 0.9);
   font-size: var(--font16);
   line-height: 1.5;
+  width: 100%;
 }
-.searchArc-content-box .searchArc-item-buttons {
+.categoricalArc-content-box .categoricalArc-item-buttons {
   margin-top: 0.5rem;
   display: grid;
   align-items: center;
@@ -1011,7 +1039,7 @@
   justify-content: right;
   margin-left: auto;
 }
-.searchArc-content-box .searchArc-item-buttons button {
+.categoricalArc-content-box .categoricalArc-item-buttons button {
   width: 11rem;
   height: 2.5rem;
   border-radius: 2rem;
@@ -1021,13 +1049,13 @@
   align-items: center;
   padding-left: 1rem;
 }
-.searchArc-content-box .searchArc-item-buttons button svg {
+.categoricalArc-content-box .categoricalArc-item-buttons button svg {
   fill: rgba(var(--white), 1);
 }
-.searchArc-content-box .searchArc-item-buttons button:first-child {
+.categoricalArc-content-box .categoricalArc-item-buttons button:first-child {
   background: rgba(var(--royalblue), 1);
 }
-.searchArc-content-box .searchArc-item-buttons button:last-child {
+.categoricalArc-content-box .categoricalArc-item-buttons button:last-child {
   background: #b1b1b1;
 }
 
