--- a/admin/adminStyle.css
+++ b/admin/adminStyle.css
@@ -80,5 +80,115 @@
 
 #dataWrite-page-inner {
 	width: 1280px;
-	margin: 0 auto;
+	margin: 1rem auto;
+}
+#dataWrite-page-inner h3 {
+	font-size: var(--font22);
+	margin-bottom: 1rem;
+}
+
+#bookWrite-page-inner {
+	width: 1280px;
+	margin: 1rem auto;
+}
+#bookWrite-page-inner h3 {
+	font-size: var(--font22);
+	margin-bottom: 1rem;
+}
+
+.dataWrite-field-box {
+	display: flex;
+	align-items: center;
+	padding: 0.6rem;
+}
+.dataWrite-field-box .field-title {
+	padding: 0.8rem 1rem 0.78rem;
+	flex-basis: 7rem;
+	background-color: rgba(var(--marineblue), 0.1);
+	font-size: var(--font14);
+	margin-right: 0.5rem;
+	display: flex;
+	justify-content: space-between;
+}
+.dataWrite-field-box .field-text {
+	padding: 0.25rem;
+	border-bottom: 1px solid rgba(var(--marineblue), 0.6);
+	outline-color: rgba(var(--marineblue), 1);
+	width: 100%;
+	flex-basis: calc(100% - 7rem);
+	color: rgba(var(--black), 0.5);
+}
+.dataWrite-field-box .field-text1 {
+	padding: 0.25rem;
+	border-bottom: 1px solid rgba(var(--marineblue), 0.6);
+	outline-color: rgba(var(--marineblue), 1);
+	width: 33%;
+}
+.dataWrite-field-box input + input {
+	margin-left: 0.5rem;
+}
+.dataWrite-field-box .imgFiles {
+	background-color: rgba(var(--marineblue), 0.6);
+	color: rgba(var(--white), 1);
+	padding: 0.6rem;
+	cursor: pointer;
+	width: 10%;
+	font-size: var(--font14);
+	text-align: center;
+}
+.dataWrite-field-box .text-box {
+	display: flex;
+	flex-direction: row;
+	width: calc(100% - 7rem);
+}
+
+input[type=file] {
+	width: 0;
+	height: 0;
+	position: absolute;
+	left: -9999px;
+}
+
+input[type=radio] {
+	width: 0;
+	height: 0;
+	position: absolute;
+	left: -9999px;
+}
+
+input[type=radio] + label {
+	margin: 0;
+	padding: 0.4rem 1.5rem;
+	box-sizing: border-box;
+	position: relative;
+	display: inline-block;
+	border: solid 1px rgba(var(--marineblue), 0.1);
+	background-color: #FFF;
+	line-height: 140%;
+	text-align: center;
+	box-shadow: 0 0 0 rgba(255, 255, 255, 0);
+	transition: border-color 0.15s ease-out, color 0.25s ease-out, background-color 0.15s ease-out, box-shadow 0.15s ease-out;
+	cursor: pointer;
+}
+
+input[type=radio]:checked + label {
+	background-color: rgba(var(--marineblue), 0.6);
+	color: #FFF;
+	box-shadow: 0 0 10px rgba(102, 179, 251, 0.5);
+	border-color: rgba(var(--marineblue), 0.1);
+	z-index: 1;
+}
+
+.admin-btn {
+	margin: 2rem 0;
+	text-align: center;
+}
+.admin-btn button {
+	padding: 0.8rem;
+	text-align: center;
+	background-color: rgba(var(--royalblue), 0.8);
+	color: rgba(var(--white), 1);
+}
+.admin-btn button:hover {
+	opacity: 0.9;
 }
